test/haskell2010/conformance/negative/derived-bounded-mixed-constructors.hs
module Main where

data Mixed = Empty | Box Int deriving (Bounded)

main = 0
